--- a/src/Webinex.Calendar.Example/appsettings.json
+++ b/src/Webinex.Calendar.Example/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=webinex_calendar;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Db": {
+    "SchemaName": "dbo",
+    "EventsTableName": "Events"
+  }
 }
