--- a/src/Webinex.Calendar.Example/Webinex.Calendar.Example.csproj
+++ b/src/Webinex.Calendar.Example/Webinex.Calendar.Example.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
@@ -15,5 +16,31 @@
   <ItemGroup>
     <ProjectReference Include="..\Webinex.Calendar\Webinex.Calendar.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="wwwroot\**" />
+  </ItemGroup>
+
+<!--    <ItemGroup>-->
+<!--      <Compile Remove="appsettings.Personal.json" />-->
+<!--      <EmbeddedResource Remove="appsettings.Personal.json" />-->
+<!--      <None Remove="appsettings.Personal.json" />-->
+<!--      <Content Remove="appsettings.Personal.json" />-->
+<!--      <None Include="wwwroot\build\**\*">-->
+<!--        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>-->
+<!--      </None>-->
+<!--    </ItemGroup>-->
 
 </Project>
